# edgepulse

./: .gitignore  README.md  install.sh  pyproject.toml
config/: config.yaml
edgepulse/: main.py
packaging/scripts/: check-system.sh  edgepulse  edgepulsed  install-files.sh  install-service.sh  verify.sh
packaging/systemd/: edgepulsed.service
src/edgepulse/: __init__.py  __main__.py  main.py
src/edgepulse/config/: config.py
src/edgepulse/core/: engine.py  status.py
src/edgepulse/drivers/: driver.py  factory.py  gpio.py  mock.py
src/edgepulse/renderers/: led_renderer.py
tests/: test_config.py  test_driver_factory.py  test_engine.py  test_status.py
