[project]
name = "edgepulse"
version = "0.1.0"
description = "A modular Raspberry Pi status and health agent."
readme = "README.md"
requires-python = ">=3.13"
authors = [
    { name = "Steven Robinson", email = "srobinson9305@gmail.com" }
]

dependencies = [
    "pyyaml",
    "psutil",
    "typer>=0.26.8",
]

[project.scripts]
edgepulse = "edgepulse.main:main"

[dependency-groups]
dev = [
    "pytest",
    "ruff",
    "black",
    "pre-commit",
]

[build-system]
requires = ["uv_build>=0.8.13,<0.9.0"]
build-backend = "uv_build"

[tool.black]
line-length = 100
target-version = ["py313"]

[tool.ruff]
line-length = 100
target-version = "py313"

[tool.ruff.lint]
select = [
    "E",
    "F",
    "I",
    "UP",
    "B",
]
